packages/bcode/tests/ui/fail/provider_must_be_send.stderr
error[E0277]: `Rc<()>` cannot be shared between threads safely
 --> tests/ui/fail/provider_must_be_send.rs:8:33
  |
8 | impl InProcessModelProvider for NotSendProvider {
  |                                 ^^^^^^^^^^^^^^^ `Rc<()>` cannot be shared between threads safely
  |
  = help: within `NotSendProvider`, the trait `Sync` is not implemented for `Rc<()>`
note: required because it appears within the type `NotSendProvider`
 --> tests/ui/fail/provider_must_be_send.rs:6:8
  |
6 | struct NotSendProvider(Rc<()>);
  |        ^^^^^^^^^^^^^^^
note: required by a bound in `InProcessModelProvider`
 --> $WORKSPACE/packages/agent-runtime/src/in_process_provider.rs
  |
  | pub trait InProcessModelProvider: Send + Sync + 'static {
  |                                          ^^^^ required by this bound in `InProcessModelProvider`

error[E0277]: `Rc<()>` cannot be sent between threads safely
 --> tests/ui/fail/provider_must_be_send.rs:8:33
  |
8 | impl InProcessModelProvider for NotSendProvider {
  |                                 ^^^^^^^^^^^^^^^ `Rc<()>` cannot be sent between threads safely
  |
  = help: within `NotSendProvider`, the trait `Send` is not implemented for `Rc<()>`
note: required because it appears within the type `NotSendProvider`
 --> tests/ui/fail/provider_must_be_send.rs:6:8
  |
6 | struct NotSendProvider(Rc<()>);
  |        ^^^^^^^^^^^^^^^
note: required by a bound in `InProcessModelProvider`
 --> $WORKSPACE/packages/agent-runtime/src/in_process_provider.rs
  |
  | pub trait InProcessModelProvider: Send + Sync + 'static {
  |                                   ^^^^ required by this bound in `InProcessModelProvider`
